- Implemented: openzwave added support for Vision Battery Operated Siren (ZM1601EU)
- Implemented: Scene On/Off actions
- Fixed: Remote sharing of devices with same ID
- Fixed: setting setpoint from udevice json call
- Changed: openzwave, larger timeout for messages to and from secondary controllers
- Implemented: RFXtrx RFY protocol implemented
- Fixed: TeleInfo checksum calculation
- Implemented: Meteostick USB (rain not correct yet)
- Changed: appcache file
- Implemented: setting signal/battery level from udevice json call
- Implemented: RFXCom over LAN setup button
- Changed: Camera setup, dropped videoURL, Screenshots are now taking from within Domoticz, now possible to watch live camera over internet connection (snapshot refresh every 100ms)

Version 1.0.1680 (April 21th 2014)
- Implemented: Support for Forecast.io
- Implemented: Temperature/Weather widgets forecast button if hardware is WU/Forecast.io
- Implemented: Widgets now turn yellow (if no timeout) if the battery level is <= 10 percent
- Implemented: Temperature Month/Year graphs now display min/max as a range
- Implemented: Temperature Month/Year graphs now displays Average Temperature
- Fixed: Scene/Group editor now displays Level is the first light/switch supports it when entering the page
- Changed: Raspberry Pi temperature reporting intern. (Should save an extra return in the log output)
- Changed: Mobile Dashboard now uses buttons to toggle state
- Implemented: EnOcean ESP2 (TCM-120) support for On/Off/Dimmer, Temperature, Humidity and Light Sensors
- Changed/Fixed: OTGW TCP/IP working now
- Implemented: OTGW, option to specify outside temperature sensor (hardware setup)
- Implemented: OpenZWave, option to configure node list settings
- Implemented: OpenZWave, option to delete failed nodes
- Changed: All external hardware sensors without RF now reports rssi level 12
- Implemented: Option to display temperature in Fahrenheit
- Fixed: Razberry, problem with door sensors