@@ -394,6 +394,7 @@ const char *RFX_Type_SubType_Desc(const unsigned char dType, const unsigned char
 		{ pTypeTEMP_HUM, sTypeTH9, "Viking 02035, 02038" },
 		{ pTypeTEMP_HUM, sTypeTH10, "Rubicson/IW008T/TX95" },
 		{ pTypeTEMP_HUM, sTypeTH11, "Oregon EW109" },
+		{ pTypeTEMP_HUM, sTypeTH12, "Imagintronix" },
 		{ pTypeTEMP_HUM, sTypeTH_LC_TC, "LaCrosse TX3" },
 		
 
@@ -591,6 +592,7 @@ const char *RFX_Type_SubType_Values(const unsigned char dType, const unsigned ch
 		{ pTypeTEMP_HUM, sTypeTH9, "Temperature,Humidity,Humidity Status" },
 		{ pTypeTEMP_HUM, sTypeTH10, "Temperature,Humidity,Humidity Status" },
 		{ pTypeTEMP_HUM, sTypeTH11, "Temperature,Humidity,Humidity Status" },
+		{ pTypeTEMP_HUM, sTypeTH12, "Temperature,Humidity,Humidity Status" },
 		{ pTypeTEMP_HUM, sTypeTH_LC_TC, "Temperature,Humidity,Humidity Status" },
 		
 
