@@ -181,6 +181,9 @@ images/logo.png
 images/logout.png
 images/lux.png
 images/lux48.png
+images/Media.png
+images/Media48_Off.png
+images/Media48_On.png
 images/moisture.png
 images/moisture48.png
 images/motion.png
