@@ -10,3 +10,4 @@ Speaker;Speaker;Audio Speaker
 Generic;Generic;Generic On/Off switch
 Fireplace;Fireplace;Fireplace
 Water;Water;Water
+Media;Media Player;Multi Media player
